--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -121,10 +121,10 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.cibw_archs_macos }}
           # TODO: Use arm64 CI runner when available
           # Skip test for platforms that cannot install dependencies
-          # Pillow: i686, pypy<3.9
+          # Pillow: i686, aarch64, ppc64le, s390x, pypy
           # numpy: cp38-musllinux-*
           # Technically can use on platforms that cannot install dependencies (Users has to compile dependencies themselves)
-          CIBW_TEST_SKIP: "*_arm64 *_universal2:arm64 *-win32 *_i686 pp{37,38}-* cp{36,37,38}-musllinux_*"
+          CIBW_TEST_SKIP: "*_arm64 *_universal2:arm64 *-win32 *_i686 *_ppc64le *_s390x pp* cp{36,37,38}-musllinux_*"
           CIBW_PROJECT_REQUIRES_PYTHON: '>=3.8,<3.12'
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: pytest {package}/tests
